# tauri-starter

./: .bunrc  .env.example  .gitignore  CONTRIBUTING.md  FILES_CHANGED.txt  FIXES_APPLIED.md  PROJECT-GOAL.md  QUICKSTART.md  README.md  biome.json  bunfig.toml  package.json  tsconfig.json  turbo.json
.agents/: ARCHITECTURE_DIAGRAM.md  COMPLETION_STATUS.md  FILES_CREATED.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.txt  file-tree.txt  project-completion-checklist.md  verify-structure.sh
.github/workflows/: test.yml
apps/desktop/: README.md  next.config.js  next.config.ts  package.json  tsconfig.json
apps/desktop/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.module.css  page.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  main.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: db.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: db.rs  mod.rs
apps/desktop/src/components/: ErrorBoundary.tsx  TodoList.module.css  TodoList.tsx
apps/desktop/src/components/ui/: alert.tsx  avatar.tsx  badge.tsx  input.tsx  (+15 more)
apps/desktop/src/contexts/: ErrorContext.tsx  ThemeContext.tsx
apps/desktop/src/hooks/: index.ts  useApiCall.ts  useDebounce.ts  useLoadingState.ts  useTodos.ts
apps/desktop/src/lib/: db.ts  errorLogger.ts  ipc.ts
apps/desktop/src/stores/: todoStore.ts
apps/desktop/src/types/: index.ts  ipc.ts
docs/: STARTER_BLUEPRINT.md
tests/: README.md
tests/e2e/: todo.test.ts
tests/unit/: db.test.ts
