[package]
name = "tauri-starter"
version = "1.0.0"
description = "Production-grade Tauri + Next.js desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_starter_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "tauri-starter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
